# EduPlatform

./: README.md  pyproject.toml  setup.cfg
backend/: setup.cfg
backend/api/v1/: permissions.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/products/: admin.py  apps.py  models.py  signals.py
backend/products/migrations/: 0001_initial.py
backend/users/: admin.py  apps.py  models.py  signals.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
